--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
     "require": {
         "php": ">=7.0",
         "phpunit/phpunit": "7.3.1",
-        "illuminate/support": "^5.8@dev"
+        "illuminate/support": "^5.8@dev",
+        "league/flysystem": "^1.1@dev",
+        "jimmyhowedotcom/api-suite": "dev-master"
     },
     "autoload": {
         "psr-4": {
